# kcc

./: .gitignore  Cargo.toml  LICENSE_DORAEMON  README.md  chick.yaml  extractdev
ast/: Cargo.toml
ast/src/: errors.rs  lib.rs  prelude.rs
ast/src/model/: assets.rs  blocktype.rs  element.rs  mod.rs  project.rs  target.rs
ast/src/parser/: comment.rs  field.rs  input.rs  list.rs  mod.rs  target.rs  value.rs  variable.rs
kcc/: Cargo.toml
kcc/src/: main.rs
kcc/src/vm/: argaccess.rs  bytecode.rs  errors.rs  intepreter.rs  internals.rs  mod.rs  terminal.rs  transform.rs
tests/: invest.sb3  nsieve.sb3
