[package]
name = "scratch_ast"
version = "0.1.0"
edition = "2024"

[lib]
name = "scratch_ast"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
serde = ["dep:serde", "dep:serde_json", "dep:serde_repr", "dep:log", "dep:serde-nested-json"]
default = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde-nested-json = {version = "0.1.3", optional = true}
serde_repr = { version = "0.1", optional = true }
log = { version = "0.4", optional = true}