[package]
name = "kcc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kcc"

[dependencies]
serde = "1"
serde_json = "1"
scratch_ast = { path = "../ast" }
zip-extract = { version = "0.2" }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
pretty_env_logger = "0.5"
parking_lot = { version = "0.12", features = ["hardware-lock-elision"] }
hashbrown = { version = "0.16", features = ["rayon"] }
rayon = "1.11"
rand = "0.9.2"
tempfile = "3.22.0"
mimalloc = "0.1.48"
colored = "3.0.0"
